[tool.poetry]
name = "klickbrick"
version = "0.1.0"
description = ""
authors = ["caseyburnett <casey.burnett@davita.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
behave = "^1.2.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
klickbrick = "klickbrick.main:main"
